--- a/GiftCards/src/main/resources/templates/home/home.html
+++ b/GiftCards/src/main/resources/templates/home/home.html
@@ -1,59 +1,169 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
 	xmlns:sec="http://www.w3.org/1999/xhtml">
-	
+
 <body>
 
-	
+
 	<!-- about us -->
 	<div th:fragment="body-aboutus">
 		<div class="new-products" id="aboutus">
 			<div class="container">
-				<h3>About Us</h3>
+				<h3 style="font-size: 26px; color: #c51911;" align="center">ABOUT
+					US</h3>
 
-				<p>Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.
-					Famous Footwear promo codes for free delivery are sometimes
-					available. Check this page regularly for savings opportunities.</p>
+				<p style="font-size: 20px; color: #000;" align="justify">
+					<a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; www.coolcoupons.in</a>. has
+					been a focused local coupon advertising platform. We believe by
+					offering an incentive through a discount coupon you are giving
+					those potential customers a reason to choose your business.
+					Business : A professionally done coolcoupons book will boost your
+					sales and attract many new customers. It is easy for your customers
+					to take advantage of your offers. There are also several bindery
+					options available, as well as padded coolcoupons book, or
+					individual coupons.
+				</p>
+				<div>&nbsp;</div>
+				<p style="font-size: 20px; color: #000;" align="justify">&nbsp;
+					&nbsp; &nbsp; &nbsp; &nbsp; Many companies use coupons to attract
+					customers to shop at their store or use their services – why not
+					give your customers entire coupon books! A good variety of offers
+					can attract all different types of people who have different
+					shopping habits. These coolcoupons book are completely custom and
+					can be set up any way you wish. Choose any number of pages you
+					want. You can make each page an individual coupon or set up each
+					page to have multiple coupons. These coolcoupons book can be used
+					as either a promotional give away or different rewards.</p>
 
 			</div>
 		</div>
+
+
+
+		<div class="new-products" id="vm">
+			<div class="container">
+				<h3 style="font-size: 26px; color: #c51911;" align="center">Values
+					&amp; Mission</h3>
+
+				<table class="table">
+
+					<tbody>
+
+						<tr>
+							<td style="font-family: inherit; color: #000; font-size: 18px;">Trust</td>
+							<td style="font-family: inherit; color: #000; font-size: 18px;">:</td>
+							<td style="font-family: inherit; color: #000; font-size: 17px;"
+								align="justify">An honest approach in everything we do.</td>
+						</tr>
+
+						<tr>
+							<td style="font-family: inherit; color: #000; font-size: 18px;">Caring</td>
+							<td style="font-family: inherit; color: #000; font-size: 18px;">:</td>
+							<td style="font-family: inherit; color: #000; font-size: 17px;"
+								align="justify">Going above and beyond for our customers.</td>
+						</tr>
+
+						<tr>
+							<td style="font-family: inherit; color: #000; font-size: 18px;">Accountability</td>
+							<td style="font-family: inherit; color: #000; font-size: 18px;">:</td>
+							<td style="font-family: inherit; color: #000; font-size: 17px;"
+								align="justify">Working harder to improve our products.</td>
+						</tr>
+
+						<tr>
+							<td style="font-family: inherit; color: #000; font-size: 18px;">Culture</td>
+							<td style="font-family: inherit; color: #000; font-size: 18px;">:</td>
+							<td style="font-family: inherit; color: #000; font-size: 17px;"
+								align="justify">Work hard, smart work, team work.</td>
+						</tr>
+
+						<tr>
+							<td style="font-family: inherit; color: #000; font-size: 18px;">Trust</td>
+							<td style="font-family: inherit; color: #000; font-size: 18px;">:</td>
+							<td style="font-family: inherit; color: #000; font-size: 17px;"
+								align="justify">An honest approach in everything we do.</td>
+						</tr>
+					</tbody>
+				</table>
+
+			</div>
+		</div>
+
+
+		<div class="new-products">
+			<div class="container">
+
+				<h3 id="od" style="color: #c51911;">online advertising</h3>
+				<div>&nbsp;</div>
+				<p style="font-size: 20px; color: #000;" align="justify">
+					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Advertise on &nbsp;<a>www.coolcoupons.in</a>.
+				</p>
+				<p style="font-size: 20px; color: #000;" align="justify">
+					Promote your business in local city, from as little as Rs 350 + Gst
+					per month, minimum booking 6 months.Reaching, thousands of online
+					customers.Often with online advertising you can be left wondering
+					if the people seeing your advertisement are likely to become actual
+					customers. Using coupons enables you to track return.</p>
+				<div>&nbsp;</div>
+				<p style="font-size: 20px; color: #000;" align="justify">
+					<a>www.coolcoupons.in</a>&nbsp; has been a focused local coupon
+					advertising platform. We believe by offering an incentive through a
+					discount coupon you are giving those potential customers a reason
+					to choose your business.
+				</p>
+				<div>&nbsp;</div>
+				<h3 id="fpi" style="color: #c51911;">Full Profile Page Includes:</h3>
+				<div>&nbsp;</div>
+				<p style="font-size: 20px; color: #000;" align="justify">About
+					your business, Your Company Logo and Business Address Details, Two
+					images, Mobile Number, Email Address, Your business and profile
+					will appear on all relevant sections of the website.</p>
+
+				<div>&nbsp;</div>
+				<h3 id="cci" style="color: #c51911;">Coupon Content Includes:</h3>
+				<div>&nbsp;</div>
+				<p style="font-size: 20px; color: #000;" align="justify">
+					Company Logo, One Image, Your Address Details, Coupon offer
+					details, Expiry date and terms and conditions, Relevant business
+					category (e.g. Restaurants).</p>
+
+				<div>&nbsp;</div>
+				<h3 id="ebi" style="color: #c51911;">Every booking also includes:</h3>
+				<div>&nbsp;</div>
+				<p style="font-size: 20px; color: #000;" align="justify">Your
+					business and your offers on our FREE Android APP.</p>
+				<p style="font-size: 20px; color: #000;" align="justify">Your
+					offers featured in our email newsletters to subscribers.</p>
+
+				<div>&nbsp;</div>
+				<h3 id="ps" style="color: #c51911;">Pricing Summary:</h3>
+				<div>&nbsp;</div>
+				<table class="table table-responsive">
+					<tbody>
+						<tr>
+							<td style="font-family: inherit; color: #000; font-size: 20px;">6
+								MONTH BOOKING(Includes Full Business Profile and 3 Voucher
+								Offers)</td>
+							<td style="font-family: inherit; color: #000; font-size: 20px;">:</td>
+							<td style="font-family: inherit; color: #000; font-size: 20px;"
+								align="justify">Rs.350 +Gst per month</td>
+						</tr>
+
+						<tr>
+							<td style="font-family: inherit; color: #000; font-size: 20px;">12
+								MONTH BOOKING</td>
+							<td style="font-family: inherit; color: #000; font-size: 20px;">:</td>
+							<td style="font-family: inherit; color: #000; font-size: 20px;"
+								align="justify">Rs. 300 + Gst per month.</td>
+						</tr>
+					</tbody>
+				</table>
+
+
+			</div>
+		</div>
+
+
 	</div>
 	<!-- end about us -->
 
