--- a/GiftCards/src/main/resources/templates/home/home.html
+++ b/GiftCards/src/main/resources/templates/home/home.html
@@ -138,7 +138,7 @@
 				<div>&nbsp;</div>
 				<h3 id="ps" style="color: #c51911;">Pricing Summary:</h3>
 				<div>&nbsp;</div>
-				<table class="table table-responsive">
+				<table class="table">
 					<tbody>
 						<tr>
 							<td style="font-family: inherit; color: #000; font-size: 20px;">6
