--- a/GiftCards/src/main/resources/templates/home/home.html
+++ b/GiftCards/src/main/resources/templates/home/home.html
@@ -13,27 +13,38 @@
 					US</h3>
 
 				<p style="font-size: 20px; color: #000;" align="justify">
-					<a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; www.coolcoupons.in</a>. has
-					been a focused local coupon advertising platform. We believe by
-					offering an incentive through a discount coupon you are giving
-					those potential customers a reason to choose your business.
-					Business : A professionally done coolcoupons book will boost your
-					sales and attract many new customers. It is easy for your customers
-					to take advantage of your offers. There are also several bindery
-					options available, as well as padded coolcoupons book, or
-					individual coupons.
+					<a>&nbsp; &nbsp; &nbsp; www.coolcoupons.in</a>. has been a focused
+					local coupon advertising platform. We believe by offering an
+					incentive through a discount coupon you are giving those potential
+					customers a reason to choose your business.
 				</p>
 				<div>&nbsp;</div>
-				<p style="font-size: 20px; color: #000;" align="justify">&nbsp;
-					&nbsp; &nbsp; &nbsp; &nbsp; Many companies use coupons to attract
-					customers to shop at their store or use their services – why not
-					give your customers entire coupon books! A good variety of offers
-					can attract all different types of people who have different
-					shopping habits. These coolcoupons book are completely custom and
-					can be set up any way you wish. Choose any number of pages you
-					want. You can make each page an individual coupon or set up each
-					page to have multiple coupons. These coolcoupons book can be used
-					as either a promotional give away or different rewards.</p>
+				<p style="font-size: 22px; color: #000;" align="justify">Business
+					:</p>
+				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
+					&nbsp; &nbsp; A professionally done coolcoupons book will boost
+					your sales and attract many new customers. It is easy for your
+					customers to take advantage of your offers. There are also several
+					bindery options available, as well as padded coolcoupons book, or
+					individual coupons.</p>
+				<div>&nbsp;</div>
+
+				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
+					&nbsp; &nbsp; Many companies use coupons to attract customers to
+					shop at their store or use their services – why not give your
+					customers entire coupon books! A good variety of offers can attract
+					all different types of people who have different shopping habits.</p>
+				<div>&nbsp;</div>
+
+				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
+					&nbsp; &nbsp; These coolcoupons book are completely custom and can
+					be set up any way you wish. Choose any number of pages you want.
+					You can make each page an individual coupon or set up each page to
+					have multiple coupons. These coolcoupons book can be used as either
+					a promotional give away or different rewards.</p>
+				<div>&nbsp;</div>
+
+
 
 			</div>
 		</div>
@@ -44,53 +55,192 @@
 			<div class="container">
 				<h3 style="font-size: 26px; color: #c51911;" align="center">Values
 					&amp; Mission</h3>
+				<p style="font-size: 22px; color: #000;" align="justify">Trust :</p>
+				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
+					&nbsp; &nbsp; An honest approach in everything we do.</p>
+				<div>&nbsp;</div>
 
-				<table class="table">
+				<p style="font-size: 22px; color: #000;" align="justify">Caring
+					:</p>
+				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
+					&nbsp; &nbsp; Going above and beyond for our customers.</p>
+				<div>&nbsp;</div>
 
-					<tbody>
+				<p style="font-size: 22px; color: #000;" align="justify">Accountability
+					:</p>
+				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
+					&nbsp; &nbsp; Taking ownership in our efforts.</p>
+				<div>&nbsp;</div>
 
-						<tr>
-							<td style="font-family: inherit; color: #000; font-size: 18px;">Trust</td>
-							<td style="font-family: inherit; color: #000; font-size: 18px;">:</td>
-							<td style="font-family: inherit; color: #000; font-size: 17px;"
-								align="justify">An honest approach in everything we do.</td>
-						</tr>
+				<p style="font-size: 22px; color: #000;" align="justify">Quality
+					:</p>
+				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
+					&nbsp; &nbsp; Working harder to improve our products.</p>
+				<div>&nbsp;</div>
 
-						<tr>
-							<td style="font-family: inherit; color: #000; font-size: 18px;">Caring</td>
-							<td style="font-family: inherit; color: #000; font-size: 18px;">:</td>
-							<td style="font-family: inherit; color: #000; font-size: 17px;"
-								align="justify">Going above and beyond for our customers.</td>
-						</tr>
+				<p style="font-size: 22px; color: #000;" align="justify">Culture
+					:</p>
+				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
+					&nbsp; &nbsp; Work hard, smart work, team work.</p>
+				<div>&nbsp;</div>
 
-						<tr>
-							<td style="font-family: inherit; color: #000; font-size: 18px;">Accountability</td>
-							<td style="font-family: inherit; color: #000; font-size: 18px;">:</td>
-							<td style="font-family: inherit; color: #000; font-size: 17px;"
-								align="justify">Working harder to improve our products.</td>
-						</tr>
-
-						<tr>
-							<td style="font-family: inherit; color: #000; font-size: 18px;">Culture</td>
-							<td style="font-family: inherit; color: #000; font-size: 18px;">:</td>
-							<td style="font-family: inherit; color: #000; font-size: 17px;"
-								align="justify">Work hard, smart work, team work.</td>
-						</tr>
-
-						<tr>
-							<td style="font-family: inherit; color: #000; font-size: 18px;">Trust</td>
-							<td style="font-family: inherit; color: #000; font-size: 18px;">:</td>
-							<td style="font-family: inherit; color: #000; font-size: 17px;"
-								align="justify">An honest approach in everything we do.</td>
-						</tr>
-					</tbody>
-				</table>
 
 			</div>
 		</div>
 
 
-		<div class="new-products">
+		<div class="new-products" id="oa">
+			<div class="container">
+				<h3 style="font-size: 26px; color: #c51911;" align="center">online
+					advertising</h3>
+				<p style="font-size: 18px; color: #000;" align="justify">
+					Advertise on <a>coolcoupons.in</a>
+				</p>
+				<div>&nbsp;</div>
+				<p style="font-size: 18px; color: #000;" align="justify">Promote
+					your business in local city, from as little as Rs 350 + Gst per
+					month, minimum booking 6 months.Reaching, thousands of online
+					customers.Often with online advertising you can be left wondering
+					if the people seeing your advertisement are likely to become actual
+					customers. Using coupons enables you to track return.</p>
+				<div>&nbsp;</div>
+
+				<p style="font-size: 18px; color: #000;" align="justify">
+					<a>www.coolcoupons.in</a> has been a focused local coupon
+					advertising platform. We believe by offering an incentive through a
+					discount coupon you are giving those potential customers a reason
+					to choose your business.
+				</p>
+				<div>&nbsp;</div>
+
+				<p style="font-size: 22px; color: #000;" align="justify">Full
+					Profile Page Includes:</p>
+				<div>&nbsp;</div>
+				<p style="font-size: 18px; color: #000;" align="justify">About
+					your business,</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Your
+					Company Logo and Business Address Details,</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Two
+					images,</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Mobile
+					Number,</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Email
+					Address</p>
+				<div>&nbsp;</div>
+
+				<p style="font-size: 22px; color: #000;" align="justify">Coupon
+					Content Includes:</p>
+				<div>&nbsp;</div>
+				<p style="font-size: 18px; color: #000;" align="justify">
+					Company Logo,</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">One
+					Image,</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Your
+					Address Details,</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Coupon
+					offer details,</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Expiry
+					date and terms and conditions,</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Expiry
+					date and terms and conditions,</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Relevant
+					business category (e.g. Restaurants),</p>
+				<div>&nbsp;</div>
+				<p style="font-size: 22px; color: #000;" align="justify">Every
+					booking also includes:</p>
+				<div>&nbsp;</div>
+				<p style="font-size: 18px; color: #000;" align="justify">Your
+					business and your offers on our FREE Android,</p>
+				<p style="font-size: 18px; color: #000;" align="justify">Your
+					offers featured in our email newsletters to subscribers,</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Pricing
+					Summary:(Includes Full Business Profile and 3 Voucher Offers)</p>
+				<p style="font-size: 18px; color: #000;" align="justify">6 MONTH
+					BOOKING : Rs 350+Gst per month,</p>
+				<p style="font-size: 18px; color: #000;" align="justify">12
+					MONTH BOOKING : Rs 300+Gst per month.</p>
+				<div>&nbsp;</div>
+			</div>
+		</div>
+
+
+		<div class="new-products" id="cca">
+			<div class="container">
+				<h3 style="font-size: 26px; color: #c51911;" align="center">coolcoupons
+					book advertising</h3>
+				<p style="font-size: 18px; color: #000;" align="justify">
+					Promote your brand direct to local homes.</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Our
+					COOLCOUPONS Book, are packed with local savings customers want. The
+					COOLCOUPONS book contains discounts, special offers. Unique
+					cheque-book sized publication.</p>
+
+
+				<p style="font-size: 18px; color: #000;" align="justify">
+					Extremely cost effective.</p>
+
+
+				<p style="font-size: 18px; color: #000;" align="justify">Huge
+					consumer appeal.</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Large
+					distribution coverage.,</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">
+					Dedicated website at <a>coolcoupons.in.</a>
+				</p>
+				<div>&nbsp;</div>
+				<p style="font-size: 22px; color: #000;" align="justify">Coverage</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Our
+					mass coverage distribution means that we deliver to just under
+					3,000 homes.</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Advertise
+					in our local city/town from as little as Rs 3000+Gst per issue.</p>
+				<div>&nbsp;</div>
+
+				<p style="font-size: 22px; color: #000;" align="justify">
+					<a>coolcoupons.in</a> has quickly become a popular destination for
+					local savers to find and print their favourite coupons.
+				</p>
+				<div>&nbsp;</div>
+
+				<p style="font-size: 22px; color: #000;" align="justify">your
+					coupons</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">Included
+					with your advert in the coupons book, you will also have your
+					offers promoted on our website. (If you are unable to create your
+					own artwork, this is not a problem coolcoupons can create your
+					artwork for a small charge of Rs 250+Gst).</p>
+				<div>&nbsp;</div>
+				<p style="font-size: 22px; color: #000;" align="justify">COMPANY
+					PROFILE</p>
+
+				<p style="font-size: 18px; color: #000;" align="justify">In
+					addition you will also have a full company profile page on our
+					website which includes business overview, logo, photos, contact
+					details.</p>
+				<div>&nbsp;</div>
+			</div>
+		</div>
+
+
+
+		<!-- <div class="new-products">
 			<div class="container">
 
 				<h3 id="od" style="color: #c51911;">online advertising</h3>
@@ -161,7 +311,7 @@
 
 
 			</div>
-		</div>
+		</div> -->
 
 
 	</div>
