--- a/GiftCards/src/main/resources/templates/home/navigationbar.html
+++ b/GiftCards/src/main/resources/templates/home/navigationbar.html
@@ -53,7 +53,7 @@
 				<nav class="navbar navbar-default">
 					<div class="m-logo hidden-md hidden-lg ">
 						<!-- <img src="images/mlogo.png" width="140" alt="logo" /> -->
-						<h4 style="color: white; align: center; margin-top: 15px">CoolCoupons</h4>
+						<h4 style="color: white; align: center; margin-top: 10px">CoolCoupons</h4>
 					</div>
 
 					<div class="navbar-header nav_2 ">
@@ -67,15 +67,12 @@
 					</div>
 					<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 						<ul class="nav navbar-nav">
-							<li><a href="#topcoupons" class="scroll">All Categories</a></li>
+							<li><a href="#topcoupons" class="scroll">Categories</a></li>
 							<li><a href="#aboutus" class="scroll">About Us</a></li>
 							<li><a href="#vm" class="scroll">Values &amp;
 									Mission</a></li>
-							<li><a href="#od" class="scroll">online advertising</a></li>
-							<li><a href="#fpi" class="scroll">Full Profile Page Includes</a></li>
-							<li><a href="#cci" class="scroll">Coupon Content Includes</a></li>
-							<li><a href="#aboutus" class="scroll">Every booking also includes</a></li>
-							<li><a href="#ps" class="scroll">Pricing Summary</a></li>
+							<li><a href="#oa" class="scroll">online advertising</a></li>
+							<li><a href="#cca" class="scroll">coolcoupons book advertising</a></li>
 							<li><a href="#contactus" class="scroll">Contact Us</a></li>
 						</ul>
 					</div>
