--- a/GiftCards/src/main/resources/templates/home/home.html
+++ b/GiftCards/src/main/resources/templates/home/home.html
@@ -19,21 +19,21 @@
 					customers a reason to choose your business.
 				</p>
 				<div>&nbsp;</div>
-				<p style="font-size: 22px; color: #000;" align="justify">Business
-					:</p>
-				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
-					&nbsp; &nbsp; A professionally done coolcoupons book will boost
-					your sales and attract many new customers. It is easy for your
-					customers to take advantage of your offers. There are also several
-					bindery options available, as well as padded coolcoupons book, or
+
+				<p style="font-size: 18px; color: #000;" align="justify">
+					Business : A professionally done coolcoupons book will boost your
+					sales and attract many new customers. It is easy for your customers
+					to take advantage of your offers. There are also several bindery
+					options available, as well as padded coolcoupons book, or
 					individual coupons.</p>
 				<div>&nbsp;</div>
 
 				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
 					&nbsp; &nbsp; Many companies use coupons to attract customers to
-					shop at their store or use their services – why not give your
-					customers entire coupon books! A good variety of offers can attract
-					all different types of people who have different shopping habits.</p>
+					shop at their store or use their services &#x2010; why not give
+					your customers entire coupon books! A good variety of offers can
+					attract all different types of people who have different shopping
+					habits.</p>
 				<div>&nbsp;</div>
 
 				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
@@ -55,33 +55,29 @@
 			<div class="container">
 				<h3 style="font-size: 26px; color: #c51911;" align="center">Values
 					&amp; Mission</h3>
-				<p style="font-size: 22px; color: #000;" align="justify">Trust :</p>
-				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
-					&nbsp; &nbsp; An honest approach in everything we do.</p>
+				<p style="font-size: 18px; color: #000;" align="justify">Trust :
+					An honest approach in everything we do.</p>
+
 				<div>&nbsp;</div>
 
-				<p style="font-size: 22px; color: #000;" align="justify">Caring
-					:</p>
-				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
-					&nbsp; &nbsp; Going above and beyond for our customers.</p>
+				<p style="font-size: 17px; color: #000;" align="justify">Caring
+					: Going above and beyond for our customers.</p>
+
 				<div>&nbsp;</div>
 
-				<p style="font-size: 22px; color: #000;" align="justify">Accountability
-					:</p>
-				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
-					&nbsp; &nbsp; Taking ownership in our efforts.</p>
+				<p style="font-size: 18px; color: #000;" align="justify">Accountability
+					: Taking ownership in our efforts.</p>
+
 				<div>&nbsp;</div>
 
-				<p style="font-size: 22px; color: #000;" align="justify">Quality
-					:</p>
-				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
-					&nbsp; &nbsp; Working harder to improve our products.</p>
+				<p style="font-size: 17px; color: #000;" align="justify">Quality
+					: Working harder to improve our products.</p>
+
 				<div>&nbsp;</div>
 
-				<p style="font-size: 22px; color: #000;" align="justify">Culture
-					:</p>
-				<p style="font-size: 18px; color: #000;" align="justify">&nbsp;
-					&nbsp; &nbsp; Work hard, smart work, team work.</p>
+				<p style="font-size: 18px; color: #000;" align="justify">Culture
+					:Work hard, smart work, team work.</p>
+
 				<div>&nbsp;</div>
 
 
@@ -93,17 +89,16 @@
 			<div class="container">
 				<h3 style="font-size: 26px; color: #c51911;" align="center">online
 					advertising</h3>
-				<p style="font-size: 18px; color: #000;" align="justify">
+				<p style="font-size: 22px; color: #000;" align="justify">
 					Advertise on <a>coolcoupons.in</a>
 				</p>
-				<div>&nbsp;</div>
+				
 				<p style="font-size: 18px; color: #000;" align="justify">Promote
 					your business in local city, from as little as Rs 350 + Gst per
 					month, minimum booking 6 months.Reaching, thousands of online
 					customers.Often with online advertising you can be left wondering
 					if the people seeing your advertisement are likely to become actual
 					customers. Using coupons enables you to track return.</p>
-				<div>&nbsp;</div>
 
 				<p style="font-size: 18px; color: #000;" align="justify">
 					<a>www.coolcoupons.in</a> has been a focused local coupon
@@ -115,7 +110,7 @@
 
 				<p style="font-size: 22px; color: #000;" align="justify">Full
 					Profile Page Includes:</p>
-				<div>&nbsp;</div>
+				
 				<p style="font-size: 18px; color: #000;" align="justify">About
 					your business,</p>
 
@@ -134,7 +129,7 @@
 
 				<p style="font-size: 22px; color: #000;" align="justify">Coupon
 					Content Includes:</p>
-				<div>&nbsp;</div>
+				
 				<p style="font-size: 18px; color: #000;" align="justify">
 					Company Logo,</p>
 
@@ -158,7 +153,6 @@
 				<div>&nbsp;</div>
 				<p style="font-size: 22px; color: #000;" align="justify">Every
 					booking also includes:</p>
-				<div>&nbsp;</div>
 				<p style="font-size: 18px; color: #000;" align="justify">Your
 					business and your offers on our FREE Android,</p>
 				<p style="font-size: 18px; color: #000;" align="justify">Your
@@ -179,12 +173,12 @@
 			<div class="container">
 				<h3 style="font-size: 26px; color: #c51911;" align="center">coolcoupons
 					book advertising</h3>
-				<p style="font-size: 18px; color: #000;" align="justify">
+				<p style="font-size: 22px; color: #000;" align="justify">
 					Promote your brand direct to local homes.</p>
 
 				<p style="font-size: 18px; color: #000;" align="justify">Our
-					COOLCOUPONS Book, are packed with local savings customers want. The
-					COOLCOUPONS book contains discounts, special offers. Unique
+					coolcoupons Book, are packed with local savings customers want. The
+					coolcoupons book contains discounts, special offers. Unique
 					cheque-book sized publication.</p>
 
 
@@ -212,7 +206,7 @@
 					in our local city/town from as little as Rs 3000+Gst per issue.</p>
 				<div>&nbsp;</div>
 
-				<p style="font-size: 22px; color: #000;" align="justify">
+				<p style="font-size: 18px; color: #000;" align="justify">
 					<a>coolcoupons.in</a> has quickly become a popular destination for
 					local savers to find and print their favourite coupons.
 				</p>
