--- a/GiftCards/src/main/resources/templates/home/navigationbar.html
+++ b/GiftCards/src/main/resources/templates/home/navigationbar.html
@@ -10,8 +10,11 @@
 		<div class="header" id="home1">
 			<div class="container hidden-xs mob-640">
 				<div class="w3l_logo pull-left">
-					<img src="/images/logo.jpg" alt="logo" width="240" />
-				</div>
+					<h2 style="color: black; align: center; margin-top: 10px">CoolCoupons</h2>
+					<p style="color: red; align: center; margin-top: 3px; font-size:12px;">A RUPEE SAVED IS A RUPEE EARNED</p>
+				<!-- <img src="/images/logo.jpg" alt="logo" width="240" /> -->
+
+					</div>
 
 				<div class="pull-right">
 					<!-- <form role="form" method="post" th:action="@{/subcategories}"> -->
@@ -54,6 +57,7 @@
 					<div class="m-logo hidden-md hidden-lg ">
 						<!-- <img src="images/mlogo.png" width="140" alt="logo" /> -->
 						<h4 style="color: white; align: center; margin-top: 10px">CoolCoupons</h4>
+						<p style="color: yellow; align: center; margin-top: 3px; font-size:8px;">A RUPEE SAVED IS A RUPEE EARNED</p>
 					</div>
 
 					<div class="navbar-header nav_2 ">
