--- a/GiftCards/src/main/resources/templates/pages/subcategoryform.html
+++ b/GiftCards/src/main/resources/templates/pages/subcategoryform.html
@@ -71,17 +71,14 @@
 						<table class="table table-hover">
 							<tr>
 								<th>#</th>
-								<th>Image</th>
 								<th>Name</th>
-								<th>Edit</th>
-								<th>Delete</th>
+								<!-- <th>Delete</th> -->
 							</tr>
-							<tr>
-								<td>1</td>
-								<td><a th:href="@{/}"><i class="fa fa-trash"></i></a></td>
-								<td>India</td>
-								<td><a th:href="@{/}"><i class="fa fa-edit "></i></a></td>
-								<td><a th:href="@{/}"><i class="fa fa-trash"></i></a></td>
+							<tr data-th-each="subcatg : ${subcategoryList}">
+								<td th:text="${subcatg.subcategoryid}"></td>
+								<td th:text="${subcatg.subcategoryname}"></td>
+								<!-- <td><a th:href="@{'/deleteSubcategory/'+${subcatg.subcategoryid}}"><i
+										class="fa fa-trash"></i></a></td> -->
 							</tr>
 						</table>
 					</div>
